--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,15 @@
     "require": {
         "php": ">=7.1",
         "ext-fileinfo": "*"
+    },
+    "extra": {
+        "laravel": {
+            "aliases": {
+                "Quark": "QuarkAdmin\\Facades\\Quark"
+            },
+            "providers": [
+                "QuarkAdmin\\QuarkServiceProvider"
+            ]
+        }
     }
 }
